Nerfed Illague, add new Armor set and new Servant variants.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -93,6 +93,8 @@
   "entity.goety.necromancer_servant":"Necromancer Servant",
   "entity.goety.vanguard_servant":"Vanguard Servant",
   "entity.goety.wraith_servant":"Wraith Servant",
+  "entity.goety.skeleton_pillager":"Skeleton Pillager",
+  "entity.goety.zombie_vindicator":"Zombie Vindicator",
   "entity.goety.haunted_armor_servant":"Haunted Armor Servant",
   "entity.goety.haunted_skull":"Haunted Skull",
   "entity.goety.doppelganger":"Doppelganger",
@@ -320,6 +322,11 @@
   "item.goety.cursed_paladin_leggings": "Cursed Paladin Leggings",
   "item.goety.cursed_paladin_boots": "Cursed Paladin Boots",
 
+  "item.goety.black_iron_helmet": "Black Iron Helmet",
+  "item.goety.black_iron_chestplate": "Black Iron Chestplate",
+  "item.goety.black_iron_leggings": "Black Iron Leggings",
+  "item.goety.black_iron_boots": "Black Iron Boots",
+
   "item.goety.dark_helmet": "Dark Helmet",
   "item.goety.dark_chestplate": "Dark Chestplate",
   "item.goety.dark_leggings": "Dark Leggings",
@@ -365,52 +372,99 @@
   "item.goety.wind_core": "Wind Core",
   "item.goety.mystic_core": "Mystic Core",
 
+  "item.goety.focus.info": "When Cast in Wand or Staff:",
   "item.goety.vexing_focus": "Vexing Focus",
+  "item.goety.vexing_focus.info": "Summons allied Vexes. Cast crouching will kill all the caster's Vexes.",
   "item.goety.biting_focus": "Biting Focus",
+  "item.goety.biting_focus.info": "Summons a row of magic Fangs in front of caster. Cast crouching will summon Fangs around the caster.",
   "item.goety.rotting_focus": "Rotting Focus",
+  "item.goety.rotting_focus.info": "Summons Zombie Servants. Cast crouching will summon the caster's servants towards them.",
   "item.goety.osseous_focus": "Osseous Focus",
+  "item.goety.osseous_focus.info": "Summons Skeleton Servants. Cast crouching will summon the caster's servants towards them.",
   "item.goety.spooky_focus": "Spooky Focus",
+  "item.goety.spooky_focus.info": "Summons Wraith Servants. Cast crouching will summon the caster's servants towards them.",
   "item.goety.vanguard_focus": "Vanguard Focus",
+  "item.goety.vanguard_focus.info": "Summons Vanguard Servants. Cast crouching will summon the caster's servants towards them.",
   "item.goety.skull_focus": "Skull Focus",
+  "item.goety.skull_focus.info": "Summons Haunted Skulls. Cast crouching will summon the caster's skulls towards them.",
   "item.goety.wither_skull_focus": "Wither Skull Focus",
+  "item.goety.wither_skull_focus.info": "Shoots a Wither Skull in front of the caster. Cast crouching will shoot a blue skull that's slower but more destructive.",
   "item.goety.ghastly_focus": "Ghastly Focus",
+  "item.goety.ghastly_focus.info": "Summons Mini-Ghasts. Cast crouching will dismiss all allied Mini-Ghasts.",
   "item.goety.iceology_focus": "Iceology Focus",
+  "item.goety.iceology_focus.info": "Summons an Ice Chunk above a location or non-allied target. Ice Chunk will fall after a time stunning and slowing entities below it.",
   "item.goety.barricade_focus": "Barricade Focus",
+  "item.goety.barricade_focus.info": "Summons Totemic Walls at a location or surrounding a target. Cast crouching will summon Totemic Bombs, that will explode after a time.",
   "item.goety.pulverize_focus": "Pulverize Focus",
+  "item.goety.pulverize_focus.info": "Transforms certain blocks into another when right-clicked on them, ie. Cobblestone to Gravel.",
   "item.goety.illusion_focus": "Mirror Focus",
+  "item.goety.illusion_focus.info": "Summons Dopplegangers of the caster. Cast crouching will dismiss all allied Dopplegangers.",
   "item.goety.feast_focus": "Feasting Focus",
+  "item.goety.feast_focus.info": "Summons a magic Fang on any nearby mob or player that's not the caster.",
   "item.goety.teeth_focus": "Teeth Focus",
+  "item.goety.teeth_focus.info": "Summons a magic Tooth above a location or non-allied target. After a time, it will fall towards the ground, damaging and flinging targets below.",
   "item.goety.fire_breath_focus": "Fire Breath Focus",
+  "item.goety.fire_breath_focus.info": "Shoots a torrent of soul fire in front of them, burning non-allied and non fire-immune targets.",
   "item.goety.fireball_focus": "Fireball Focus",
+  "item.goety.fireball_focus.info": "Shoots a small Fireball that damages non fire-immune targets.",
   "item.goety.lavaball_focus": "Lava Bomb Focus",
+  "item.goety.lavaball_focus.info": "Shoots a Lava Bomb. Cast crouching will make the Lava Bomb non-destructive on terrain.",
   "item.goety.soul_bolt_focus": "Soul Bolt Focus",
+  "item.goety.soul_bolt_focus.info": "Shoots a Soul Bolt that deals small magic damage and high knockback.",
   "item.goety.magic_bolt_focus": "Magic Bolt Focus",
+  "item.goety.magic_bolt_focus.info": "Shoots a Magic Bolt that deals small magic damage and summons a small pool of damaging magic on a target that's hit by it.",
   "item.goety.sword_focus": "Magic Sword Focus",
+  "item.goety.sword_focus.info": "Shoots a magical duplicate of the caster's sword. Does nothing if caster is not wielding a sword off or main hand.",
   "item.goety.frost_breath_focus": "Frost Breath Focus",
+  "item.goety.frost_breath_focus.info": "Shoots a torrent of frost in front of them, giving non-allied targets freezing damage.",
   "item.goety.ice_spike_focus": "Ice Spike Focus",
+  "item.goety.ice_spike_focus.info": "Shoots an Ice Spike. Ice Spikes deals small freezing damage and gives target Freezing for a short time.",
   "item.goety.hail_focus": "Hail Focus",
+  "item.goety.hail_focus.info": "Summons a cloud above a location or target that causes any non-allied targets beneath it to take freezing damage.",
   "item.goety.updraft_focus": "Updraft Focus",
+  "item.goety.updraft_focus.info": "Summons a cloud of wind on a location or target that, after a time, shoots any target up in the air, damaging them.",
   "item.goety.wind_blast_focus": "Wind Blast Focus",
+  "item.goety.wind_blast_focus.info": "Shoots a blast of wind that deals no damage to targets, but will knock them back.",
   "item.goety.shocking_focus": "Shocking Focus",
+  "item.goety.shocking_focus.info": "Shoots multiple electric currents at a non-allied target.",
   "item.goety.charge_focus": "Charge Focus",
+  "item.goety.charge_focus.info": "Right-clicking on a mob or player will give them Charged and increase their Charged level. Charged I boosts Speed and Damage a bit, Charged II boosts Speed a lot but lowers Damage, giving another level will damage them.",
   "item.goety.thunderbolt_focus": "Thunderbolt Focus",
+  "item.goety.thunderbolt_focus.info": "Shoots a large electric bolt at a non-allied target",
   "item.goety.lightning_focus": "Lightning Focus",
+  "item.goety.lightning_focus.info": "Summons a Lightning Bolt at a location or target.",
   "item.goety.shockwave_focus": "Shockwave Focus",
+  "item.goety.shockwave_focus.info": "Summons a non-destructive soul explosion on the caster, knocking back and damaging nearby non-allied targets.",
   "item.goety.sonic_boom_focus": "Sonic Boom Focus",
+  "item.goety.sonic_boom_focus.info": "Shoots a Sonic Boom in front of them. Sonic Booms deals damage that goes through armor and enchantments.",
   "item.goety.blink_focus": "Blink Focus",
+  "item.goety.blink_focus.info": "Teleports the caster to a location they're looking at from a certain range.",
   "item.goety.soul_light_focus": "Soul Light Focus",
+  "item.goety.soul_light_focus.info": "Shoots a projectile that will create a dim ball of light when hit on a location.",
   "item.goety.glow_light_focus": "Glow Light Focus",
+  "item.goety.glow_light_focus.info": "Shoots a projectile that will create a glowing ball of light when hit on a location.",
   "item.goety.iron_hide_focus": "Iron Hide Focus",
+  "item.goety.iron_hide_focus.info": "Gives Iron Hide effect which increases caster's armor points.",
   "item.goety.bulwark_focus": "Bulwark Focus",
+  "item.goety.bulwark_focus.info": "Gives magical shields that surrounds the caster. Taking damage from a mob or player will destroy a shield and knocks back the attacker.",
   "item.goety.soul_heal_focus": "Soul Heal Focus",
+  "item.goety.soul_heal_focus.info": "Heals the caster from a range of an amount.",
   "item.goety.launch_focus": "Launching Focus",
+  "item.goety.launch_focus.info": "Launches the caster to the direction they're looking at.",
   "item.goety.flying_focus": "Flight Focus",
+  "item.goety.flying_focus.info": "Fly at the direction the caster is looking at.",
   "item.goety.cushion_focus": "Cushion Focus",
+  "item.goety.cushion_focus.info": "Summons a cloud on a location which will cause any entity that falls on it to not take fall damage.",
   "item.goety.call_focus": "Call Focus",
+  "item.goety.call_focus.info": "Right-clicking on a servant will save it to the focus. If the focus has a servant saved on it, teleports the servant towards the caster.",
   "item.goety.recall_focus": "Recall Focus",
+  "item.goety.recall_focus.info": "Right-clicking on certain blocks will save its position to the focus. If the focus has a position saved on it, teleports the caster to the position.",
   "item.goety.command_focus": "Command Focus",
+  "item.goety.command_focus.info": "Right-clicking on a servant will save it to the focus. If the focus has a servant saved on it, right-clicking on a block or entity will make the servant move to its position, right-clicking on a certain mob will cause the servant to attempt to ride on it.",
   "item.goety.ender_chest_focus": "Ender Chest Focus",
+  "item.goety.ender_chest_focus.info": "Opens the caster's Ender Chest on their location.",
   "item.goety.corruption_focus": "Corruption Focus",
+  "item.goety.corruption_focus.info": "Shoots out a beam of corruption that deals constant magic damage and ignores invulnerability frames.",
 
   "item.goety.cross_pottery_sherd": "Cross Pottery Sherd",
   "item.goety.dead_pottery_sherd": "Dead Pottery Sherd",
