--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -93,6 +93,8 @@
   "entity.goety.necromancer_servant": "死灵法师仆从",
   "entity.goety.vanguard_servant": "先锋仆从",
   "entity.goety.wraith_servant": "幽灵仆从",
+  "entity.goety.skeleton_pillager":"骷髅掠夺者",
+  "entity.goety.zombie_vindicator":"僵尸卫道士",
   "entity.goety.haunted_armor_servant": "缠魂仆胄",
   "entity.goety.haunted_skull": "缠魂飞颅",
   "entity.goety.doppelganger": "替身",
@@ -320,6 +322,11 @@
   "item.goety.cursed_paladin_leggings": "诅咒圣骑士护腿",
   "item.goety.cursed_paladin_boots": "诅咒圣骑士靴子",
 
+  "item.goety.black_iron_helmet": "黑铁头盔",
+  "item.goety.black_iron_chestplate": "黑铁胸甲",
+  "item.goety.black_iron_leggings": "黑铁护腿",
+  "item.goety.black_iron_boots": "黑铁靴子",
+
   "item.goety.dark_helmet": "黑暗头盔",
   "item.goety.dark_chestplate": "黑暗胸甲",
   "item.goety.dark_leggings": "黑暗护腿",
@@ -365,58 +372,105 @@
   "item.goety.wind_core": "烈风核心",
   "item.goety.mystic_core": "神秘核心",
 
+  "item.goety.focus.info": "当使用魔杖施法时:",
   "item.goety.vexing_focus": "恼鬼聚晶",
+  "item.goety.vexing_focus.info": "生成与你友好的恼鬼，潜行施法会杀死你所有的恼鬼，",
   "item.goety.biting_focus": "撕咬聚晶",
+  "item.goety.biting_focus.info": "在施法者面前召唤出一排唤魔者尖牙。潜行施法会召唤围绕施法者的尖牙。",
   "item.goety.rotting_focus": "腐烂聚晶",
+  "item.goety.rotting_focus.info": "召唤僵尸仆从，潜行施法会让仆从向召唤者走来.",
   "item.goety.osseous_focus": "骨质聚晶",
+  "item.goety.osseous_focus.info": "召唤骷髅仆从，潜行施法会让仆从向召唤者走来.",
   "item.goety.spooky_focus": "骇人聚晶",
+  "item.goety.spooky_focus.info": "召唤幽灵仆从，潜行施法会让仆从向召唤者走来.",
   "item.goety.vanguard_focus": "先锋聚晶",
+  "item.goety.vanguard_focus.info": "召唤先锋仆从，潜行施法会让仆从向召唤者走来.",
   "item.goety.skull_focus": "头颅聚晶",
+  "item.goety.skull_focus.info": "召唤缠魂飞颅，潜行施法会让仆从向召唤者走来..",
   "item.goety.wither_skull_focus": "凋灵聚晶",
+  "item.goety.wither_skull_focus.info": "发射黑色凋灵之首. 潜行时施法发射蓝色凋灵之首.",
   "item.goety.ghastly_focus": "阴森聚晶",
+  "item.goety.ghastly_focus.info": "召唤迷你恶魂. 潜行施法会杀死你所有的迷你恶魂.",
   "item.goety.iceology_focus": "冰川聚晶",
+  "item.goety.iceology_focus.info": "在一个地点或目标上方召唤一个冰块。冰块将在一段时间后坠落，使其下方的实体被震撼并减速.",
   "item.goety.barricade_focus": "障碍聚晶",
+  "item.goety.barricade_focus.info": "在某个位置或目标周围召唤图腾墙。潜行施法会召唤图腾炸弹，一段时间后会爆炸.",
   "item.goety.pulverize_focus": "瓦解聚晶",
+  "item.goety.pulverize_focus.info": "可以将某些方块变成圆石，再到砂砾，最后变成沙子.",
   "item.goety.illusion_focus": "幻象聚晶",
+  "item.goety.illusion_focus.info": "召唤施法者的替身，潜行施法会杀死所有你的替身.",
   "item.goety.feast_focus": "尖牙盛宴聚晶",
+  "item.goety.feast_focus.info": "对附近任何非施法者的生物召唤尖牙.",
   "item.goety.teeth_focus": "牙之聚晶",
+  "item.goety.teeth_focus.info": "在一个地点或目标上方召唤一颗魔牙。一段时间后，它会朝着地面坠落，破坏并击飞下面的目标.",
   "item.goety.fire_breath_focus": "炎呼聚晶",
+  "item.goety.fire_breath_focus.info": "在施法者面前射出一股灵魂之火，燃烧目标.",
   "item.goety.fireball_focus": "火球聚晶",
+  "item.goety.fireball_focus.info": "发射一个类似烈焰人的小火球.",
   "item.goety.lavaball_focus": "熔岩炸弹聚晶",
+  "item.goety.lavaball_focus.info": "发射一个岩浆炸弹，当潜行施法时，熔岩炸弹不会破坏地形",
   "item.goety.soul_bolt_focus": "灵魂束聚晶",
+  "item.goety.soul_bolt_focus.info": "射出灵魂束，造成较小的魔法伤害和较高的击退.",
   "item.goety.magic_bolt_focus": "魔力束聚晶",
+  "item.goety.magic_bolt_focus.info": "射出魔法束，并在被其击中的目标上召唤魔法云，可以抑制敌人的生命恢复.",
   "item.goety.sword_focus": "魔力剑聚晶",
+  "item.goety.sword_focus.info": "射出施法者持有的剑的魔法复制品。如果施法者没有手持剑，则无效果.",
   "item.goety.frost_breath_focus": "霜呼聚晶",
+  "item.goety.frost_breath_focus.info": "在施法者面前射出一股霜冻洪流，对目标造成冰冻伤害.",
   "item.goety.ice_spike_focus": "冰刺聚晶",
+  "item.goety.ice_spike_focus.info": "射出一个冰刺。冰锥造成较小的冰冻伤害，并使目标得到短时间的冰冻效果.",
   "item.goety.hail_focus": "冰雹聚晶",
+  "item.goety.hail_focus.info": "在一个位置或目标上方召唤一冰雹云，导致其下方的目标受到冰冻伤害.",
   "item.goety.updraft_focus": "上升气流聚晶",
+  "item.goety.updraft_focus.info": "在一个位置或目标上召唤一团风，一段时间后，风把在范围内的所有目标弹到空中，对其造成伤害.",
   "item.goety.wind_blast_focus": "风爆聚晶",
+  "item.goety.wind_blast_focus.info": "射出一阵风，不会对目标造成伤害，但会将其击退.",
   "item.goety.shocking_focus": "震撼聚晶",
+  "item.goety.shocking_focus.info": "向目标发射多股电流.",
   "item.goety.charge_focus": "充能聚晶",
+  "item.goety.charge_focus.info": "右键点击生物可以赋予他们充能效果。",
   "item.goety.thunderbolt_focus": "雷霆聚晶",
+  "item.goety.thunderbolt_focus.info": "对目标发射一大股闪电束。",
   "item.goety.lightning_focus": "闪电聚晶",
+  "item.goety.lightning_focus.info": "在某个地点或生物身上召唤闪电.",
   "item.goety.shockwave_focus": "冲击波聚晶",
+  "item.goety.shockwave_focus.info": "进行灵魂爆炸，击退并伤害附近的目标.",
   "item.goety.sonic_boom_focus": "音爆聚晶",
+  "item.goety.sonic_boom_focus.info": "在施法者面前发射一串音爆。音爆可以无视盔甲与附魔造成伤害.",
   "item.goety.blink_focus": "瞬闪聚晶",
+  "item.goety.blink_focus.info": "将施法者传送到他所看的地方.",
   "item.goety.soul_light_focus": "灵魂光聚晶",
+  "item.goety.soul_light_focus.info": "发射一枚投射物，当击中某个位置时，会产生一个暗淡的光球.",
   "item.goety.glow_light_focus": "发光聚晶",
+  "item.goety.glow_light_focus.info": "发射一枚投射物，当击中某个位置时，会产生一个明亮的光球.",
   "item.goety.iron_hide_focus": "铁皮聚晶",
+  "item.goety.iron_hide_focus.info": "给予施法者铁皮效果，可以提升施法者的盔甲值.",
   "item.goety.bulwark_focus": "壁垒聚晶",
+  "item.goety.bulwark_focus.info": "产生一圈围绕施法者的魔法护盾。当施法者受到伤害时会摧毁盾牌并击退攻击者.",
   "item.goety.soul_heal_focus": "治疗聚晶",
+  "item.goety.soul_heal_focus.info": "从一定范围内治疗施法者.",
   "item.goety.launch_focus": "发射聚晶",
+  "item.goety.launch_focus.info": "将施法者发射到他们所看到的方向.",
   "item.goety.flying_focus": "飞翔聚晶",
+  "item.goety.flying_focus.info": "朝施法者所看的方向飞行.",
   "item.goety.cushion_focus": "云垫聚晶",
+  "item.goety.cushion_focus.info": "在一个位置召唤一团云，这将使落在其上的任何实体都不会受到坠落伤害.",
   "item.goety.call_focus": "召集聚晶",
+  "item.goety.call_focus.info": "右键单击一个仆从会将其保存到聚晶并使其处于常加载状态。施法会把仆从传送到施法者的附近.",
   "item.goety.recall_focus": "回溯聚晶",
+  "item.goety.recall_focus.info": "右键单击特定的方块会将其位置保存到当前聚晶。施法会把施法者传送到保存的位置.",
   "item.goety.command_focus": "命令聚晶",
+  "item.goety.command_focus.info": "右键单击一个仆从会将其保存到焦点。右键点击一个方块或实体可以命令仆从移动到其位置，右键点击某个生物将使仆从试图骑在上面。",
   "item.goety.ender_chest_focus": "末影箱聚晶",
+  "item.goety.ender_chest_focus.info": "打开施法者的末影箱.",
   "item.goety.corruption_focus": "腐化聚晶",
+  "item.goety.corruption_focus.info": "射出一束腐化光束，造成持续的魔法伤害。",
 
-  "item.goety.cross_pottery_sherd": "Cross Pottery Sherd",
-  "item.goety.dead_pottery_sherd": "Dead Pottery Sherd",
-  "item.goety.haunt_pottery_sherd": "Haunt Pottery Sherd",
-  "item.goety.night_pottery_sherd": "Night Pottery Sherd",
-  "item.goety.soul_pottery_sherd": "Soul Pottery Sherd",
+  "item.goety.cross_pottery_sherd": "十字陶器碎片",
+  "item.goety.dead_pottery_sherd": "死亡陶器碎片",
+  "item.goety.haunt_pottery_sherd": "缠魂陶器碎片",
+  "item.goety.night_pottery_sherd": "暗夜陶器碎片",
+  "item.goety.soul_pottery_sherd": "灵魂陶器碎片",
 
   "item.goety.pedestal_dummy": "祭坛基座",
 
