Players can move while wheels are up and Robe resistances are configurable.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -912,14 +912,14 @@
   "info.goety.necro_cape": "Allows undead servants heal using soul energy.",
   "info.goety.necro_cape_power": "Certain newly summoned undead servants gain extra abilities.",
   "info.goety.illusion_robe": "Improves the Mirror spell.",
-  "info.goety.frost_robe": "+85% resistance to freezing damage, immunity to powder snow.",
+  "info.goety.frost_robe": "+%s%% resistance to freezing damage, immunity to powder snow.",
   "info.goety.frost_robe_discount": "Halves soul cost of frost spells.",
   "info.goety.wind_robe": "Provides slow fall at a cost of soul energy, immunity to fall damage.",
   "info.goety.wind_robe_discount": "Halves soul cost of wind spells.",
-  "info.goety.witch_robe": "+85% resistance to magical damage.",
+  "info.goety.witch_robe": "+%s%% resistance to magical damage.",
   "info.goety.witch_robe_brew": "Press %s to open robe brewing stand.",
   "info.goety.warlock_garment": "Automatically uses Wartful Eggs when afflicted with negative effect.",
-  "info.goety.warlock_robe": "+85% resistance to explosions.",
+  "info.goety.warlock_robe": "+%s%% resistance to explosions.",
   "info.goety.ring_of_want": "When enchanted with Wanting, increases looting level when killing with servants or spells.",
   "info.goety.ring_of_the_dragon": "Empowers breathing spells when worn.",
   "info.goety.grave_gloves": "+50% attack speed for Scythes.",
