Players can move while wheels are up and Robe resistances are configurable.

--- a/src/main/resources/assets/goety/lang/ja_jp.json
+++ b/src/main/resources/assets/goety/lang/ja_jp.json
@@ -929,14 +929,14 @@
   "info.goety.necro_cape": "アンデッドのしもべがソウルエネルギーを使って回復できるようにします。",
   "info.goety.necro_cape_power": "特定の新しく召喚されたアンデッドの従者は追加の能力を獲得します。",
   "info.goety.illusion_robe": "鏡のスペルを改造します。",
-  "info.goety.frost_robe": "凍結ダメージに対する耐性 +85%、粉雪に対する耐性。",
+  "info.goety.frost_robe": "凍結ダメージに対する耐性 +%s%%、粉雪に対する耐性。",
   "info.goety.frost_robe_discount": "フロスト呪文のソウルコストが半分になる。",
   "info.goety.wind_robe": "ソウルエネルギーを犠牲にしてゆっくりと落下し、落下ダメージに対する耐性を与えます。",
   "info.goety.wind_robe_discount": "風魔法のソウルコストが半分になる。",
-  "info.goety.witch_robe": "魔法ダメージに対する耐性 +85%。",
+  "info.goety.witch_robe": "魔法ダメージに対する耐性 +%s%%。",
   "info.goety.witch_robe_brew": "風魔法のソウルコストが半分になる。",
   "info.goety.warlock_garment": "マイナス効果を受けると自動的にいぼだらけの卵を使用します。",
-  "info.goety.warlock_robe": "爆発に対する耐性 +85%。",
+  "info.goety.warlock_robe": "爆発に対する耐性 +%s%%。",
   "info.goety.ring_of_want": "欲しいのエンチャントが施されている場合、従者や呪文で殺害する際の略奪レベルが増加します。",
   "info.goety.ring_of_the_dragon": "着用するとブレス呪文が強化されます。",
   "info.goety.grave_gloves": "サイスの攻撃速度 +50%。",
