--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -929,14 +929,14 @@
   "info.goety.necro_cape": "允许亡灵仆从使用主人的灵魂能量治愈自身.",
   "info.goety.necro_cape_power": "赋予某些新召唤的亡灵仆从以新能力.",
   "info.goety.illusion_robe": "完善幻象法术.",
-  "info.goety.frost_robe": "+85%的冰冻抗性，免疫细雪.",
+  "info.goety.frost_robe": "+%s%%的冰冻抗性，免疫细雪.",
   "info.goety.frost_robe_discount": "减半霜冻法术的灵魂消耗",
   "info.goety.wind_robe": "以灵魂能量为代价提供缓降，完全免疫坠落伤害.",
   "info.goety.wind_robe_discount": "减半烈风法术的灵魂消耗。.",
-  "info.goety.witch_robe": "+85% 魔法伤害抗性.",
+  "info.goety.witch_robe": "+%s%% 魔法伤害抗性.",
   "info.goety.witch_robe_brew": "“按 %s 用以打开女巫袍内部酿造台.",
   "info.goety.warlock_garment": "被负面效果影响时自动使用地狱疣蛋.",
-  "info.goety.warlock_robe": "+85% 爆炸抗性.",
+  "info.goety.warlock_robe": "+%s%% 爆炸抗性.",
   "info.goety.ring_of_want": "当被附魔渴望时，用呼吸聚晶法术杀死敌人会增加战利品掉落，就像抢夺那样.",
   "info.goety.ring_of_the_dragon": "增强呼吸聚晶的威力.",
   "info.goety.grave_gloves": "+50% 镰刀攻速.",
