Fixed Server Crash and updated CN Translations.

--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -107,7 +107,7 @@
   "entity.goety.totemic_wall": "图腾墙",
   "entity.goety.totemic_bomb": "图腾炸弹",
 
-  "entity.goety.volcano": "Volcano",
+  "entity.goety.volcano":"火山",
 
   "entity.goety.skull_lord": "骷髅领主",
   "entity.goety.bone_lord": "骨头领主",
@@ -152,7 +152,7 @@
   "entity.goety.snap_fungus": "啪啪菌团",
   "entity.goety.blast_fungus": "爆破菌团",
   "entity.goety.berserk_fungus": "狂暴菌团",
-  "entity.goety.pyroclast": "Pyroclast",
+  "entity.goety.pyroclast":"火山碎屑",
   "entity.goety.fire_tornado": "燃烧龙卷风",
   "entity.goety.falling_block": "坠落的方块",
   "entity.goety.corrupted_beam": "腐化光束",
@@ -412,8 +412,8 @@
   "item.goety.barricade_focus.info": "在某个位置或目标周围召唤图腾墙。潜行施法会召唤图腾炸弹，一段时间后会爆炸.",
   "item.goety.pulverize_focus": "瓦解聚晶",
   "item.goety.pulverize_focus.info": "可以将某些方块变成圆石，再到砂砾，最后变成沙子.",
-  "item.goety.eruption_focus": "Eruption Focus",
-  "item.goety.eruption_focus.info": "Summons a small volcano at a location which will shoot several flaming rocks at the sky.",
+  "item.goety.eruption_focus": "爆发聚晶",
+  "item.goety.eruption_focus.info": "在一个地方召唤一座小火山，它会向天空喷出几块燃烧的岩石。",
   "item.goety.illusion_focus": "幻象聚晶",
   "item.goety.illusion_focus.info": "召唤施法者的替身，潜行施法会杀死所有你的替身.",
   "item.goety.feast_focus": "尖牙盛宴聚晶",
@@ -454,8 +454,8 @@
   "item.goety.shockwave_focus.info": "进行灵魂爆炸，击退并伤害附近的目标.",
   "item.goety.sonic_boom_focus": "音爆聚晶",
   "item.goety.sonic_boom_focus.info": "在施法者面前发射一串音爆。音爆可以无视盔甲与附魔造成伤害.",
-  "item.goety.end_walk_focus": "End Walk Focus",
-  "item.goety.end_walk_focus.info": "Renders caster completely invisible. Once effect ends or break, the caster teleports back to where the spell was cast.",
+  "item.goety.end_walk_focus": "末影漫步聚晶",
+  "item.goety.end_walk_focus.info": "使施法者完全隐身。一旦效果结束或中断，施法者将传送回施法前的地点.",
   "item.goety.blink_focus": "瞬闪聚晶",
   "item.goety.blink_focus.info": "将施法者传送到他所看的地方.",
   "item.goety.soul_light_focus": "灵魂光聚晶",
@@ -807,8 +807,8 @@
   "effect.goety.wild_rage.description": "含有此效果的实体将瞄准并攻击附近任何可攻击的实体.",
   "effect.goety.stunned": "震撼",
   "effect.goety.stunned.description": "含有此效果的实体无法移动、攻击或使用方块或物品.",
-  "effect.goety.shadow_walk": "Shadow Walk",
-  "effect.goety.shadow_walk.description": "Grants true invisibility. Removed when interacting with blocks, entities or items. Multiplies attack damage while under the effect.",
+  "effect.goety.shadow_walk": "融身入影",
+  "effect.goety.shadow_walk.description": "赋予实体真正的隐身，实体一旦与方块或其他实体互动，效果会立刻结束，在此效果下会增加攻击伤害。",
   "effect.goety.love": "爱",
   "effect.goety.fertility": "富饶",
   "effect.goety.growth": "生长",
