Fixed latest bugs and updated translations

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -857,6 +857,8 @@
   "effect.goety.grow_cactus": "Grow Cactus",
   "effect.goety.grow_cave_vines": "Grow Cave Vines",
   "effect.goety.grow_tree": "Grow Tree",
+  "effect.goety.pulverize": "Pulverize",
+  "effect.goety.corrosion": "Corrosion",
   "effect.goety.shear": "Shear",
   "effect.goety.flaying": "Flaying",
   "effect.goety.pruning": "Pruning",
