--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -1543,30 +1543,32 @@
   "death.attack.goety.sword.item": "%1$s 被 %2$s 用 %3$s 切成片了",
   "death.attack.goety.soulLeech": "%1$s 的灵魂被 %2$s 吸走了",
   "death.attack.goety.soulLeech.item": "%1$s 的灵魂被 %2$s 用 %3$s 吸走了",
-  "entity.goety.crusher": "Crusher",
-  "entity.goety.storm_caster": "Storm Caster",
-  "item.goety.crusher_spawn_egg": "Crusher Spawn Egg",
-  "item.goety.storm_caster_spawn_egg": "Storm Caster Spawn Egg",
-  "item.goety.great_hammer": "Great Hammer",
-  "item.goety.stormlander": "Stormlander",
-  "item.goety.ring_of_force": "Ring of Force",
-  "item.goety.tunnel_focus": "Tunnel Focus",
-  "item.goety.tunnel_focus.info": "Summons an ethereal tunnel for a short while after right-clicking on a block, allowing entities to walk or fall through.",
-  "spell.goety.abyss": "§1Abyss§1",
-  "subtitle.goety.storm_caster_ambient": "Storm Caster stormcasts",
-  "subtitle.goety.storm_caster_hurt": "Storm Caster hurts",
-  "subtitle.goety.storm_caster_monsoon": "Storm Caster summons",
-  "subtitle.goety.storm_caster_discharge": "Storm Caster discharges",
-  "subtitle.goety.storm_caster_celebrate": "Storm Caster cheers",
-  "subtitle.goety.storm_caster_death": "Storm Caster dies",
-  "subtitle.goety.hammer_swing": "Hammer Swing",
-  "subtitle.goety.hammer_impact": "Hammer Hits",
-  "advancements.goety.get_hammer.title": "Hammer Time!",
-  "advancements.goety.get_hammer.description": "Obtain a Great Hammer, a powerful weapon or tool. Attack Speed increases if not holding anything offhand.",
-  "advancements.goety.get_stormlander.title": "Power of the Storm",
-  "advancements.goety.get_stormlander.description": "Obtain the Stormlander, the treasure of the Illagers.",
-  "death.attack.goety.chock": "%1$s was chocked by %2$s",
-  "death.attack.goety.chock.item": "%1$s was chocked by %2$s using %3$s",
-  "advancements.goety.craft_ring_of_force.title": "Chocking Hazard",
-  "advancements.goety.craft_ring_of_force.description": "Using Telekinesis spell on a mob or player will cause them to slowly lose breath and chock."
+  "entity.goety.crusher": "粉碎者",
+  "entity.goety.storm_caster": "暴风术士",
+  "item.goety.crusher_spawn_egg": "粉碎者刷怪蛋",
+  "item.goety.storm_caster_spawn_egg": "暴风术士刷怪蛋",
+  "item.goety.great_hammer": "大锤",
+  "item.goety.stormlander": "雷霆之锤",
+  "item.goety.ring_of_force": "原力戒指",
+  "item.goety.tunnel_focus": "隧穿聚晶",
+  "item.goety.tunnel_focus.info": "右键点击一个方块后，可以短暂召唤一个空灵隧道，允许实体行走在里面。",
+  "spell.goety.abyss": "§1深渊§1",
+  "subtitle.goety.storm_caster_ambient": "暴风术士：嘀咕",
+  "subtitle.goety.storm_caster_hurt": "暴风术士：受伤",
+  "subtitle.goety.storm_caster_monsoon": "暴风术士：召唤",
+  "subtitle.goety.storm_caster_discharge": "暴风术士：释放",
+  "subtitle.goety.storm_caster_celebrate": "暴风术士：庆祝",
+  "subtitle.goety.storm_caster_death": "暴风术士：死亡",
+  "subtitle.goety.hammer_swing": "锤子：挥舞",
+  "subtitle.goety.hammer_impact": "锤子：攻击",
+  "advancements.goety.get_hammer.title": "让我们把这里砸个粉碎！",
+  "advancements.goety.get_hammer.description": "获得大锤，一种强大的武器或工具。如果副手空闲，攻击速度会增加.",
+  "advancements.goety.get_stormlander.title": "暴风之力",
+  "advancements.goety.get_stormlander.description": "得到雷霆之锤，灾厄村民们的宝藏。",
+  "death.attack.goety.chock": "%1$s 被 %2$s 掐死了",
+  "death.attack.goety.chock.item": "%1$s 被 %2$s 用 %3$s 掐死了",
+  "advancements.goety.craft_ring_of_force.title": "5岁以下儿童禁止使用",
+  "advancements.goety.craft_ring_of_force.description": "对生物使用原力法术会导致他们慢慢失去呼吸并窒息。",
+  "effect.goety.pulverize": "粉碎",
+  "effect.goety.corrosion": "腐蚀"
 }
