--- a/src/main/resources/assets/goety/lang/ja_jp.json
+++ b/src/main/resources/assets/goety/lang/ja_jp.json
@@ -1543,30 +1543,32 @@
   "death.attack.goety.sword.item": "%1$s は %3$s で %2$s によってスライスされた",
   "death.attack.goety.soulLeech": "%1$s の魂は %2$s に吸い取られた",
   "death.attack.goety.soulLeech.item": "%1$s の魂は %3$s で %2$s に吸い取られた",
-  "entity.goety.crusher": "Crusher",
-  "entity.goety.storm_caster": "Storm Caster",
-  "item.goety.crusher_spawn_egg": "Crusher Spawn Egg",
-  "item.goety.storm_caster_spawn_egg": "Storm Caster Spawn Egg",
-  "item.goety.great_hammer": "Great Hammer",
-  "item.goety.stormlander": "Stormlander",
-  "item.goety.ring_of_force": "Ring of Force",
-  "item.goety.tunnel_focus": "Tunnel Focus",
-  "item.goety.tunnel_focus.info": "Summons an ethereal tunnel for a short while after right-clicking on a block, allowing entities to walk or fall through.",
-  "spell.goety.abyss": "§1Abyss§1",
-  "subtitle.goety.storm_caster_ambient": "Storm Caster stormcasts",
-  "subtitle.goety.storm_caster_hurt": "Storm Caster hurts",
-  "subtitle.goety.storm_caster_monsoon": "Storm Caster summons",
-  "subtitle.goety.storm_caster_discharge": "Storm Caster discharges",
-  "subtitle.goety.storm_caster_celebrate": "Storm Caster cheers",
-  "subtitle.goety.storm_caster_death": "Storm Caster dies",
-  "subtitle.goety.hammer_swing": "Hammer Swing",
-  "subtitle.goety.hammer_impact": "Hammer Hits",
-  "advancements.goety.get_hammer.title": "Hammer Time!",
-  "advancements.goety.get_hammer.description": "Obtain a Great Hammer, a powerful weapon or tool. Attack Speed increases if not holding anything offhand.",
-  "advancements.goety.get_stormlander.title": "Power of the Storm",
-  "advancements.goety.get_stormlander.description": "Obtain the Stormlander, the treasure of the Illagers.",
-  "death.attack.goety.chock": "%1$s was chocked by %2$s",
-  "death.attack.goety.chock.item": "%1$s was chocked by %2$s using %3$s",
-  "advancements.goety.craft_ring_of_force.title": "Chocking Hazard",
-  "advancements.goety.craft_ring_of_force.description": "Using Telekinesis spell on a mob or player will cause them to slowly lose breath and chock."
+  "entity.goety.crusher": "クラッシャー",
+  "entity.goety.storm_caster": "ストームキャスター",
+  "item.goety.crusher_spawn_egg": "クラッシャーのスポーンエッグ",
+  "item.goety.storm_caster_spawn_egg": "ストームキャスターのスポーンエッグ",
+  "item.goety.great_hammer": "グレートハンマー",
+  "item.goety.stormlander": "ストームランダー",
+  "item.goety.ring_of_force": "フォースリング",
+  "item.goety.tunnel_focus": "トンネルのフォーカス",
+  "item.goety.tunnel_focus.info": "ブロックを右クリックすると、トンネルが短時間召喚され、エンティティがその中を歩くことができるようになります。",
+  "spell.goety.abyss": "§1深淵§1",
+  "subtitle.goety.storm_caster_ambient": "ストームランダーが呟いた",
+  "subtitle.goety.storm_caster_hurt": "ストームランダーがダメージを受ける",
+  "subtitle.goety.storm_caster_monsoon": "ストームランダーが召喚する",
+  "subtitle.goety.storm_caster_discharge": "ストームランダーが解き放たれた",
+  "subtitle.goety.storm_caster_celebrate": "ストームランダーの祝賀",
+  "subtitle.goety.storm_caster_death": "ストームランダーが死ぬ",
+  "subtitle.goety.hammer_swing": "ハンマーがスイングされる",
+  "subtitle.goety.hammer_impact": "ハンマーの攻撃",
+  "advancements.goety.get_hammer.title": "ここを粉々に打ち砕いてやろう！",
+  "advancements.goety.get_hammer.description": "強力な武器またはツールであるグレートハンマーを入手します。 オフハンドが開いていると場合、攻撃速度が増加します。",
+  "advancements.goety.get_stormlander.title": "嵐の力",
+  "advancements.goety.get_stormlander.description": "邪悪な村人の宝である雷のハンマーを手に入れましょう。",
+  "death.attack.goety.chock": "%1$sは%2$sによって絞殺された",
+  "death.attack.goety.chock.item": "%1$s は %2$s によって %3$s を使用して絞殺された",
+  "advancements.goety.craft_ring_of_force.title": "5歳未満のお子様による使用は禁止されています",
+  "advancements.goety.craft_ring_of_force.description": "クリーチャーにフォース呪文を使用すると、クリーチャーはゆっくりと息を失い、窒息してしまいます。",
+  "effect.goety.pulverize": "粉砕",
+  "effect.goety.corrosion": "腐食"
 }
