More Advancements and add some changes.

--- a/src/main/resources/assets/goety/lang/zh_cn.json
+++ b/src/main/resources/assets/goety/lang/zh_cn.json
@@ -1707,5 +1707,45 @@
   "advancements.goety.summon_whisperer.title": "无迹可寻",
   "advancements.goety.summon_whisperer.description": "召唤一只唤藤者.",
   "advancements.goety.summon_leapleaf.title": "把它给我！",
-  "advancements.goety.summon_leapleaf.description": "使用活力核心召唤一个腾跃之叶."
+  "advancements.goety.summon_leapleaf.description": "使用活力核心召唤一个腾跃之叶.",
+  "info.goety.research.already": "你已经研究了这个!",
+  "advancements.goety.craft_animation_core.title": "动漫世界",
+  "advancements.goety.craft_animation_core.description": "使用仪式来制作一个活力（动画）核心。",
+  "advancements.goety.craft_fire_breath_focus.title": "良言一句暖三冬",
+  "advancements.goety.craft_fire_breath_focus.description": "制作炎呼聚晶。",
+  "advancements.goety.craft_frost_breath_focus.title": "恶语伤人六月寒",
+  "advancements.goety.craft_frost_breath_focus.description": "制作霜呼聚晶。",
+  "advancements.goety.craft_iceology_focus.title": "发光鱿鱼最讨厌的一集",
+  "advancements.goety.craft_iceology_focus.description": "制作冰川聚晶。",
+  "advancements.goety.craft_overgrowth_focus.title": "藤蔓汇编",
+  "advancements.goety.craft_overgrowth_focus.description": "制作增生聚晶。",
+  "advancements.goety.craft_tunnel_focus.title": "隧道视觉",
+  "advancements.goety.craft_tunnel_focus.description": "制作一个隧穿聚晶。",
+  "advancements.goety.craft_sonic_boom_focus.title": "尝尝这个！",
+  "advancements.goety.craft_sonic_boom_focus.description": "制作音爆聚晶。",
+  "advancements.goety.craft_frost_robe.title": "看起来很冷酷！",
+  "advancements.goety.craft_frost_robe.description": "霜冻长袍可以免疫冰冻伤害，能够无视细雪，还可以减半霜冻法术的灵魂消耗。",
+  "advancements.goety.craft_wild_robe.title": "野兽国国王",
+  "advancements.goety.craft_wild_robe.description": "荒野长袍可以免疫中毒与毒液效果，还可以减半荒野法术的灵魂消耗，并且给予荒野生物一些新的效果。",
+  "advancements.goety.servant_kill_mob.title": "好士兵服从命令",
+  "advancements.goety.servant_kill_mob.description": "让你的仆从杀死一个怪物。",
+  "advancements.goety.servant_kill_apostle.title": "世界与神明遗弃之子",
+  "advancements.goety.servant_kill_apostle.description": "让你的仆从击败使徒。",
+  "advancements.goety.summon_zombie.title": "我是僵尸模式",
+  "advancements.goety.summon_zombie.description": "召唤一个僵尸仆从。",
+  "advancements.goety.summon_skeleton.title": "嘟嘟哒嘟嘟哒",
+  "advancements.goety.summon_skeleton.description": "召唤一个骷髅仆从。",
+  "advancements.goety.summon_wraith.title": "如果你追到我，我就让你嘿嘿嘿",
+  "advancements.goety.summon_wraith.description": "召唤一个幽灵仆从。",
+  "advancements.goety.summon_slime.title": "儿童选择奖",
+  "advancements.goety.summon_slime.description": "召唤一个史莱姆仆从。",
+  "advancements.goety.summon_golems.title": "《傀儡世界》",
+  "advancements.goety.summon_golems.description": "召唤一个呼啸傀儡，红石傀儡，以及一个墓灵巨像。",
+  "advancements.goety.summon_apostle.title": "末日审判",
+  "advancements.goety.summon_apostle.description": "我又看见一个白色的大宝座与坐在上面的，从他面前天地都逃避了，再无可见之处了。《启示录20：11》",
+  "death.attack.goety.swarm": "%1$s被%2$s召唤的一大群蜜蜂感染了",
+  "death.attack.goety.swarm.item": "%1$s被%2$s用%3$s感染致死",
+  "info.goety.research.learned": "你已经研究了这个",
+  "info.goety.wild_robe": "对毒物和酸毒液免疫。 允许自然仆人使用灵魂能量进行治疗。",
+  "info.goety.wild_robe_discount": "狂野法术的灵魂消耗减半。"
 }
